appId: ${APP_ID}
---
- extendedWaitUntil:
    visible:
      text: "Property AI Agent"
    timeout: 20000

- scroll
- waitForAnimationToEnd

- tapOn:
    below: "Add New Property"

- repeat:
    times: 4
    commands:
      - waitForAnimationToEnd
